[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-vllm-study"
version = "0.1.0"
description = "面向初学者的 Qwen3 推理引擎教学项目"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "safetensors>=0.5,<0.6",
    "tokenizers>=0.21,<0.22",
    "transformers>=4.51,<4.54",
]

[tool.setuptools.packages.find]
include = ["toyvllm*"]

